# fastapi_perfect_guide

./: .gitignore  pyproject.toml  readme.md
AsyncDB_Handling/start/: async_db.py  async_pool.py  main.py
AsyncDB_Handling/start/db/: database.py
AsyncDB_Handling/start/routes/: blog.py
AsyncDB_Handling/start/services/: blog_svc.py
Authentication/start/: main.py
Authentication/start/routes/: auth.py
Authentication/start/schemas/: auth_schema.py
Authentication/start/services/: auth_svc.py
Blog_Bootstrap/start/routes/: blog.py
Blog_Bootstrap/start/services/: blog_svc.py
Blog_Bootstrap/start/utils/: util.py
Blog_DB_Handling/start/: main.py
Blog_DB_Handling/start/db/: database.py
Blog_DB_Handling/start/routes/: blog.py
Blog_DB_Handling/start/schemas/: blog_schema.py
Blog_DB_Handling/start/templates/: index.html  modify_blog.html  new_blog.html  show_blog.html
Blog_DB_Handling/start/utils/: util.py
Blog_MVC/start/routes/: blog.py
Blog_MVC/start/services/: blog_svc.py
Blog_MVC/start/templates/: modify_blog.html
Bootstrap_Template/start/: main.py
DB_Fundamentals/: bind_variable.py  context_practice.py  cursor_fetch.py  database.py  db_basic.py  module_context.py  module_direct.py  pool_practice.py
Exception_Handler/start/: main.py
Middleware/start/: cors_request.html  main.py
Pydantic/: pydantic_01.py  pydantic_02.py  pydantic_03.py
Requests/: main_path.py  main_query.py
Requests/static/: rbody.html
Router/start/: main.py
Session_Redis/start/: main.py
Signed_Cookie/start/: main_cookie.py
Welcome/: main.py
(+21 files in other folders)
