[tool.poetry]
name = "fastapi-perfect-guide"
version = "0.1.0"
description = ""
authors = ["updaun <updauney@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
pydantic-extra-types = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
pycountry = "^24.6.1"
sqlalchemy = "2.0.32"
mysql-connector-python = "9.0.0"
python-dotenv = "^1.0.1"
pymysql = "1.1.1"
aiomysql = "0.2.0"
aiofiles = "24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
